[gd_scene load_steps=11 format=2]

[ext_resource path="res://Juego/Estaciones/Rele/Rele_parte2.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estaciones/Rele/superactivado.ogg" type="AudioStream" id=2]
[ext_resource path="res://Juego/Estaciones/Rele/Activado.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Estaciones/Rele/Rele_parte1.png" type="Texture" id=4]
[ext_resource path="res://Juego/Estaciones/Rele/ReleMasa.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "activada"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 0.858824, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Sprite3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ActivadoSFX:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ActivadoSFX:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"

[sub_resource type="Animation" id=4]
resource_name = "super_activada"
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Sprite3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0745098, 0.858824, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ActivadoSFX:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ActivadoSFX:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 272.0

[node name="ReleMasa" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprites" type="Node2D" parent="."]
rotation = 6.28319

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 0, -46.5 )
scale = Vector2( 1, 1.05172 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
modulate = Color( 1, 1, 0.858824, 1 )
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 0, 48 )
rotation = 3.14159
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Spawn = SubResource( 1 )
anims/activada = SubResource( 2 )
anims/default = SubResource( 3 )
anims/super_activada = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="ActivadoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DeteccionPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeteccionPlayer"]
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="DeteccionPlayer" to="." method="_on_DeteccionPlayer_body_entered"]
